# prfait

./: .gitignore  Cargo.toml  README.md  cli.ts  dev.ts  package.json  test_parse.rs  tsconfig.json  vite.config.ts  workflow-template.yml
.prfait/: pr-storytelling.json
action/: action.yml
server/: git.ts  index.ts
src/: action.rs  analysis.rs  app.rs  checks.rs  config.rs  event.rs  github.rs  highlight.rs  lib.rs  main.rs  onboarding.rs  review.rs  structural_diff.rs
src/components/: diff_panel.rs  mod.rs  pr_panel.rs  status_bar.rs
web/: index.html
web/src/: App.tsx  style.css
web/src/components/: DiffViewer.tsx  FileTree.tsx  MarkdownEditor.tsx  SnippetTray.tsx  StoryEditor.tsx
web/src/hooks/: useApi.ts  useHighlighter.ts  useStory.ts
