[package]
name = "prfait"
version = "0.1.0"
edition = "2021"
default-run = "prfait"
repository = "https://github.com/SundaeSwap-finance/prfait"

[dependencies]
inspect-core = { git = "https://github.com/Ataraxy-Labs/inspect", rev = "a652462" }
sem-core = { git = "https://github.com/Ataraxy-Labs/sem", rev = "71a6579" }

ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tui-tree-widget = "0.23"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes"] }
syntect-tui = "3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
color-eyre = "0.6"
similar = "2"

# Tree-sitter for structural diffs (same versions as sem-core to deduplicate)
tree-sitter = "0.26"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-c-sharp = "0.23"
dirs = "6"
inquire = "0.7"
cargo-dist = "0.31.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
